k8s/e06-ingress/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: whoami-deploy
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: whoami-svc
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
